.provarCaches/00D5h000009Q6XQEA0/objects/provar__Code_Scan_Result__c.object
<CustomObject>
    <fields>
        <fullName>provar__Category__c</fullName>
        <formula>provar__Rule__r.provar__Category__c</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Code_Scan__c</fullName>
        <label>Code Scan</label>
        <referenceTo>provar__Code_Scan__c</referenceTo>
        <relationshipLabel>Code Scan Results</relationshipLabel>
        <relationshipName>Code_Scan_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Note</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>provar__Number_of_Issues__c</fullName>
        <label>Number of Issues</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>provar__Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>provar__Rule__c</referenceTo>
        <relationshipLabel>Code Scan Results</relationshipLabel>
        <relationshipName>Code_Scan_Results</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Severity__c</fullName>
        <formula>TEXT(provar__Rule__r.provar__Severity__c)</formula>
        <label>Severity</label>
        <type>Text</type>
    </fields>
    <label>Code Scan Result</label>
    <nameField>
        <displayFormat>CSR-{0000000}</displayFormat>
        <label>Code Scan Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Scan Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>